; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_hook_rate_to_float.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_hook_rate_to_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32)* @hook_rate_to_float to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @hook_rate_to_float(i32 %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 128, label %5
    i32 131, label %6
    i32 130, label %7
    i32 129, label %8
  ]

5:                                                ; preds = %1
  store float 2.000000e+00, float* %2, align 4
  br label %10

6:                                                ; preds = %1
  store float 5.000000e-01, float* %2, align 4
  br label %10

7:                                                ; preds = %1
  store float 0x3FB99999A0000000, float* %2, align 4
  br label %10

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %1, %8
  store float 1.000000e+00, float* %2, align 4
  br label %10

10:                                               ; preds = %9, %7, %6, %5
  %11 = load float, float* %2, align 4
  ret float %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
